--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>🤖 BoredBot API 🤖</h1>
-        <h2>This bot generte random activity to do for you. <br>
+        <h1>🤖 BoredBot 🤖</h1>
+        <h2>This API generte random activity to do for you. <br>
             Just click the red button!</h2>
 
         <button id="get-activity"></button>
